@@ -16,6 +16,7 @@ Changes:
 - Add vmstat utility.
 - Add ability to edit sync property on ZFS dataset and volume.
 - Add ability to import encrypted disks.
+- Add ability to import software raid disks. (except vinum)
 - Wait response of LAN interface if static with gateway.
 - Run umount before iSCSI initiator shutdown.
 - Remount all after netif is up for iSCSI device.
